k8s/attendee-resources/workshops/workshop-11/manifests/service-cat.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-cat
  labels:
    app: hello-cat
spec:
  type: ClusterIP
  selector:
    app: hello-cat
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http
