k8s/attendee-resources/workshops/workshop-11/manifests/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
# e.g.    john.hello.jetstack-training-a.uk
  - host: NAME.hello.jetstack-training-a.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: hello
          servicePort: 80
